--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "EXT-RadioPlayer.js",
   "scripts": {
     "preinstall": "installer/preinstall.sh",
-    "postinstall": "installer/postinstall.sh"
+    "postinstall": "installer/postinstall.sh",
+    "update": "installer/update.sh"
   },
   "keywords": [
     "magic mirror",
