--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "EXT-RadioPlayer",
-  "version": "1.0.4",
-  "rev": "230312",
+  "version": "1.1.0",
+  "rev": "230326",
   "description": "An embedded radio player on MagicMirror.",
   "main": "EXT-RadioPlayer.js",
   "scripts": {
     "preinstall": "installer/preinstall.sh",
     "postinstall": "installer/postinstall.sh",
-    "update": "installer/update.sh"
+    "update": "installer/update.sh",
+    "reset": "git reset --hard",
+    "clean": "rm -rf node_modules package-lock.json"
   },
   "keywords": [
     "magic mirror",
@@ -25,6 +27,9 @@
   },
   "homepage": "https://wiki.bugsounet.fr/en/EXT-RadioPlayer",
   "dependencies": {
-    "@bugsounet/cvlc": "^1.0.5"
+    "@bugsounet/cvlc": "^1.0.5",
+    "check-node-version": "^4.2.1",
+    "glob": "^9.3.2",
+    "minify": "^9.2.0"
   }
 }
