--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "EXT-RadioPlayer",
-  "version": "1.1.2",
-  "rev": "230412",
+  "version": "1.1.3",
+  "rev": "230715",
   "description": "An embedded radio player on MagicMirror.",
   "main": "EXT-RadioPlayer.js",
   "scripts": {
@@ -27,7 +27,7 @@
   },
   "homepage": "https://wiki.bugsounet.fr/en/EXT-RadioPlayer",
   "dependencies": {
-    "@bugsounet/cvlc": "^1.0.5",
+    "@bugsounet/cvlc": "https://github.com/bugsounet/cvlc",
     "check-node-version": "^4.2.1",
     "glob": "^9.3.2",
     "minify": "^9.2.0"
