--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "EXT-RadioPlayer",
-  "version": "1.1.2",
-  "rev": "230412",
+  "version": "1.1.3",
+  "rev": "230722",
   "description": "An embedded radio player on MagicMirror.",
   "main": "EXT-RadioPlayer.js",
   "scripts": {
@@ -25,11 +25,12 @@
     "type": "git",
     "url": "https://github.com/bugsounet/EXT-RadioPlayer"
   },
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "homepage": "https://wiki.bugsounet.fr/en/EXT-RadioPlayer",
   "dependencies": {
-    "@bugsounet/cvlc": "^1.0.5",
-    "check-node-version": "^4.2.1",
-    "glob": "^9.3.2",
-    "minify": "^9.2.0"
+    "@magicmirror2/cvlc": "^1.0.8",
+    "glob": "^10.3.3"
   }
 }
