--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "homepage": "https://wiki.bugsounet.fr/en/EXT-RadioPlayer",
   "dependencies": {
     "@magicmirror2/cvlc": "^1.0.8",
+    "esbuild": "^0.18.15",
     "glob": "^10.3.3"
   }
 }
