--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
   "dependencies": {
     "@magicmirror2/cvlc": "^1.0.8",
     "esbuild": "^0.20.2",
-    "glob": "^10.3.12"
+    "glob": "^10.3.12",
+    "vlc-client": "^1.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^8.57.0",
