--- a/streamsConfig.fr.json
+++ b/streamsConfig.fr.json
@@ -1,62 +1,62 @@
 {
   "Chérie FM": {
-    "img": "modules/EXT-RadioPlayer/Logos/FR/ChérieFM.png",
+    "img": "https://static.mytuner.mobi/media/radios-150px/kxvWVQdPM5.png",
     "link": "https://scdn.nrjaudio.fm/fr/30201/mp3_128.mp3?origine=EXT-RadioPlayer&cdn_path=audio_lbs9"
   },
   "RTL": {
-    "img": "modules/EXT-RadioPlayer/Logos/FR/RTL.png",
+    "img": "https://static.mytuner.mobi/media/radios-150px/J83ajRTKe4.png",
     "link": "http://streaming.radio.rtl.fr/rtl-1-44-128"
   },
   "Rire et chansons": {
-    "img": "modules/EXT-RadioPlayer/Logos/FR/Rire&Chansons.png",
+    "img": "https://static.mytuner.mobi/media/radios-150px/635/radio-rire-et-chanson.97bcdcdb.png",
     "link": "https://scdn.nrjaudio.fm/audio1/fr/30401/mp3_128.mp3"
   },
   "RTL2": {
-    "img": "modules/EXT-RadioPlayer/Logos/FR/RTL2.png",
+    "img": "https://static.mytuner.mobi/media/radios-150px/H6MZXYZ7Na.jpg",
     "link": "http://streaming.radio.rtl2.fr/rtl2-1-44-128"
   },
   "FunRadio": {
-    "img": "modules/EXT-RadioPlayer/Logos/FR/FunRadio.png",
+    "img": "https://static.mytuner.mobi/media/radios-150px/9t8QTeypzK.png",
     "link": "http://streaming.radio.funradio.fr:80/fun-1-44-128"
   },
   "Europe1": {
-    "img": "modules/EXT-RadioPlayer/Logos/FR/Europe1.png",
-    "http://stream.europe1.fr/europe1.mp3"
+    "img": "https://static.mytuner.mobi/media/radios-150px/WjXsTrcYrN.png",
+    "link": "http://stream.europe1.fr/europe1.mp3"
   },
   "RFM": {
-    "img": "modules/EXT-RadioPlayer/Logos/FR/RFM.png",
+    "img": "https://static.mytuner.mobi/media/tvos_radios/smLqE2ydsh.png",
     "link": "http://stream.rfm.fr/rfm.mp3"
   },
   "RMC": {
-    "img": "modules/EXT-RadioPlayer/Logos/FR/RMC.svg",
+    "img": "https://static.mytuner.mobi/media/tvos_radios/810/rmc.4c584647.png",
     "link": "http://audio.bfmtv.com/rmcradio_128.mp3"
   },
   "NRJ": {
-    "img": "modules/EXT-RadioPlayer/Logos/FR/NRJ.png",
+    "img": "https://static.mytuner.mobi/media/tvos_radios/xVfVg9wDY8.png",
     "link": "https://scdn.nrjaudio.fm/audio1/fr/30001/mp3_128.mp3"
   },
   "Nostalgie": {
-    "img": "modules/EXT-RadioPlayer/Logos/FR/Nostalgie.png",
+    "img": "https://static.mytuner.mobi/media/tvos_radios/Gs9yHxR7hJ.png",
     "link": "http://185.52.127.155/fr/40045/aac_64.mp3?origine=EXT-RadioPlayer"
   },
   "Contact FM": {
-    "img": "modules/EXT-RadioPlayer/Logos/FR/contact.png",
+    "img": "https://static.mytuner.mobi/media/tvos_radios/374/contact-fm.0d628283.png",
     "link": "http://radiocontact.ice.infomaniak.ch/radiocontact-mp3-192.mp3"
   },
   "Voltage": {
-    "img": "modules/EXT-RadioPlayer/Logos/FR/voltage.png",
+    "img": "https://static.mytuner.mobi/media/tvos_radios/5uhFP4Jnu9.png",
     "link": "http://start-voltage.ice.infomaniak.ch/start-voltage-high.mp3"
   },
   "Skyrock": {
-    "img": "modules/EXT-RadioPlayer/Logos/FR/Skyrock.png",
+    "img": "https://static.mytuner.mobi/media/tvos_radios/UhwkCVXxvh.jpg",
     "link": "http://icecast.skyrock.net/s/natio_mp3_128k"
   },
   "Radio FG": {
-    "img": "modules/EXT-RadioPlayer/Logos/FR/fg.png",
+    "img": "https://static.mytuner.mobi/media/radios-150px/RcVWVBJxMW.png",
     "link": "http://radiofg.impek.com/fg"
   },
   "France Inter": {
-    "img": "modules/EXT-RadioPlayer/Logos/FR/FranceInter.png",
+    "img": "https://static.mytuner.mobi/media/radios-150px/J5XvQkPZCa.png",
     "link": "http://direct.franceinter.fr/live/franceinter-midfi.mp3"
   }
 }
