--- a/streamsConfig.it.json
+++ b/streamsConfig.it.json
@@ -1,29 +1,30 @@
 {
-  "Kiss Kiss": {
+  "Radio Kiss Kiss": {
+    "img": "https://static2.mytuner.mobi/media/tvos_radios/R6DyE2LEgJ.jpg",
     "link": "http://ice07.fluidstream.net:8080/KissKiss.mp3"
   },
   "Radio 101": {
+    "img": "https://static2.mytuner.mobi/media/tvos_radios/r8MjNMsYjM.png",
     "link": "http://icecast.unitedradio.it/r101"
   },
   "Radio Italia": {
+    "img": "https://cdn-radiotime-logos.tunein.com/s18147d.png",
     "link": "http://stream1.rds.it:8000/rds64k"
   },
-  "Radio 1": {
-    "link": "http://icestreaming.rai.it/1.mp3"
-  },
-  "Radio Anni90": {
-    "link": "http://mp3.hitradiort1.c.nmdn.net/rt190swl/livestream.mp3"
-  },
   "Radio 105": {
+    "img": "https://static2.mytuner.mobi/media/tvos_radios/kDEyWkTtEE.png",
     "link": "http://icecast.unitedradio.it/Radio105.mp3"
   },
   "RDS": {
+    "img": "https://static2.mytuner.mobi/media/tvos_radios/aaTRZ9H74S.jpg",
     "link": "https://icstream.rds.radio/rds"
   },
-  "RTL 1025": {
+  "RTL 102.5": {
+    "img": "https://static2.mytuner.mobi/media/tvos_radios/UWUuuy57sW.png",
     "link": "https://streamingv2.shoutcast.com/rtl-1025"
   },
-  "Radio DJ": {
-    "img": "https://static.mytuner.mobi/media/tvos_radios/810/rmc.4c584647.png"
+  "Radio Deejay": {
+    "img": "https://static2.mytuner.mobi/media/tvos_radios/p6XeFjfDZh.jpg",
+    "link": "https://streamcdnp1-4c4b867c89244861ac216426883d1ad0.msvdn.net/radiodeejay/radiodeejay/play1.m3u8"
   }
 }
